# project_template_lib_cpp

./: CMakeLists.txt  README.md
cmake/: configure_lib.cmake  libraryinfo.cpp.in  libraryinfo.h.in  make_config_header.in  make_master_header.in  static_vslibs.cmake  test_01.cpp.in
doc/: Doxyfile.in
include/: dont_delete_this.txt
source/: CMakeLists.txt
tests/: CMakeLists.txt
